# biovault_bfloat16

./: CMakeLists.txt  CMakeLists.txt.in  README.md  azure-pipelines.yml  biovault_bfloat16.h  biovault_bfloat16_test.cpp
